<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shhh!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Shhh!</string>
    <string name="go">Go!</string>
    <string name="recording">Recording...</string>
    <string name="signin">Sign In!</string>
    <string name="highscores">Highscore:</string>    
    <string name="highscore">Highscores</string>
    <string name="blank_score">0.00</string>
    <string name="menu">Menu</string>
    <string name="you_score">You Score:</string>
    <string name="device">Device:</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_high_scores">HighScores</string>
	<string name="play">Play</string>
	
</resources>
