<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libnoisebackgrounddeesignv2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_style"
        android:onClick="signInButton"
        android:text="@string/signin" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btnScores"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:onClick="highScoresButton"
        android:text="@string/highscore" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/btnScores"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_style"
        android:onClick="playButton"
        android:text="@string/play" />

</RelativeLayout>