<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libnoisebackgrounddeesignv2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HighScores" >

    <TextView
        android:id="@+id/txtScores"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/highscore"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnBack"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:onClick="menuButton"
        android:text="@string/menu" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:onClick="playButton"
        android:text="@string/play" />

    <ListView
        android:id="@+id/lstScores"
        android:layout_width="100dp"
        android:layout_height="400dp"
        android:layout_below="@+id/txtScores"
        android:layout_toRightOf="@+id/textView1" >

    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/lstNames"
        android:layout_width="100dp"
        android:layout_height="400dp"
        android:layout_alignTop="@+id/lstScores"
        android:layout_toLeftOf="@+id/textView1" >

    </ListView>

</RelativeLayout>